# thorchain-swaps-fetcher-2

./: .gitignore  Cargo.toml  README.md  next_page_token.txt  prev_page_token.txt
migrations/: create_chainflip_swaps_detailed.sql
src/: db.rs  fetcher.rs  main.rs  utils.rs
src/models/: actions_model.rs  chainflip_swaps.rs  closing_prices.rs  mod.rs
src/routes/: mod.rs  swap_history.rs
src/tests/: mod.rs
src/utils/: chainflip.rs  coingecko.rs  cron.rs  midgard.rs  transaction_handler.rs
