[package]
name = "swap-data-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
actix-cors = "0.7.0"
nanoid = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
regex = "1.11.1"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-rustls", "macros"] }
once_cell = "1.10"
thiserror = "1.0.68"
